@@ -91,29 +91,29 @@
 # @author Trevor Vaughan <tvaughan@onyxpoint.com>
 #
 define rsync::retrieve (
-  String                 $source_path,
-  String                 $target_path,
-  Simplib::Host          $rsync_server     = simplib::lookup('simp_options::rsync::server'),
-  String                 $proto            = 'rsync',
-  Stdlib::Absolutepath   $rsync_path       = '/usr/bin/rsync',
-  Boolean                $preserve_acl     = true,
-  Boolean                $preserve_xattrs  = true,
-  Boolean                $preserve_owner   = true,
-  Boolean                $preserve_group   = true,
-  Boolean                $preserve_devices = false,
-  Array[String]          $exclude          = ['.svn/','.git/'],
-  Integer[0]             $rsync_timeout    = 2,
-  String                 $logoutput        = 'on_failure',
-  Boolean                $delete           = false,
-  Optional[String]       $bwlimit          = simplib::lookup('rsync::bwlimit', { 'default_value' => undef }),
-  Boolean                $copy_links       = false,
-  Boolean                $size_only        = false,
-  Boolean                $no_implied_dirs  = true,
-  Optional[String]       $user             = undef,
-  Optional[String]       $pass             = undef,
-  Boolean                $pull             = true,
-  Optional[Catalogentry] $rnotify          = undef,
-  Optional[Catalogentry] $rsubscribe       = undef
+  String                                      $source_path,
+  String                                      $target_path,
+  Variant[Simplib::Host, Simplib::Host::Port] $rsync_server     = simplib::lookup('simp_options::rsync::server'),
+  String                                      $proto            = 'rsync',
+  Stdlib::Absolutepath                        $rsync_path       = '/usr/bin/rsync',
+  Boolean                                     $preserve_acl     = true,
+  Boolean                                     $preserve_xattrs  = true,
+  Boolean                                     $preserve_owner   = true,
+  Boolean                                     $preserve_group   = true,
+  Boolean                                     $preserve_devices = false,
+  Array[String]                               $exclude          = ['.svn/','.git/'],
+  Integer[0]                                  $rsync_timeout    = 2,
+  String                                      $logoutput        = 'on_failure',
+  Boolean                                     $delete           = false,
+  Optional[String]                            $bwlimit          = simplib::lookup('rsync::bwlimit', { 'default_value' => undef }),
+  Boolean                                     $copy_links       = false,
+  Boolean                                     $size_only        = false,
+  Boolean                                     $no_implied_dirs  = true,
+  Optional[String]                            $user             = undef,
+  Optional[String]                            $pass             = undef,
+  Boolean                                     $pull             = true,
+  Optional[Catalogentry]                      $rnotify          = undef,
+  Optional[Catalogentry]                      $rsubscribe       = undef
 ) {
   include '::rsync'
 
