@@ -23,7 +23,7 @@ describe 'rsync::server::global' do
 
           it { is_expected.to compile.with_all_deps }
           it { is_expected.to create_concat__fragment('rsync_global').with_content(/address = 127.0.0.1/) }
-          it { is_expected.to create_tcpwrappers__allow('rsync') }
+          it { is_expected.to create_tcpwrappers__allow('rsync_server') }
         end
       end
     end
